[metadata]
name = delatore
summary = Monitoring of customer service monitoring
description-file =
    README.rst
author = OTC team
home-page = https://github.com/opentelekomcloud-infra/delatore
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
platform = any
license_file = LICENSE

[pbr]
warnerrors = True
